--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ jetbrainsAnnotationsVersion=23.0.0
 kotlin.stdlib.default.dependency=false
 
 # mod info
-mavenGroup=at.petrak.hexcasting
+mavenGroup=io.github.wolverine14.hexshadowitems
 modId=shadowitems
 modVersion=0.0.1
 
