updated to hexdummy v2.0.1

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,9 +7,15 @@ on:
   pull_request:
   workflow_call:
     inputs:
+      mod_release:
+        type: boolean
+        required: true
       hexdoc_release:
         type: boolean
-        default: false
+        required: true
+      dry_run:
+        type: boolean
+        required: true
   workflow_dispatch:
 
 permissions:
@@ -34,6 +40,8 @@ jobs:
       - uses: gradle/actions/setup-gradle@v4
 
       - name: Build mod
+        env:
+          RELEASE: ${{ inputs.mod_release == true }}
         run: ./gradlew build
 
       # if this step fails, you need to run your datagen and commit the updated files
@@ -156,7 +164,7 @@ jobs:
       pages: read
     outputs:
       pages-url: ${{ steps.build.outputs.pages-url }}
-      deploy: ${{ github.event_name != 'pull_request' && (contains(fromJson(env.HEXDOC_BRANCHES), github.ref_name) || inputs.hexdoc_release) }}
+      deploy: ${{ github.event_name != 'pull_request' && contains(fromJson(env.HEXDOC_BRANCHES), github.ref_name) && !inputs.dry_run }}
     steps:
       - uses: actions/checkout@v4
 
@@ -169,7 +177,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          release: False
+          release: ${{ inputs.hexdoc_release == true }}
 
   deploy-pages:
     needs:
@@ -191,7 +199,7 @@ jobs:
       - name: Merge new hexdoc build into existing book
         uses: hexdoc-dev/actions/merge@v1
         with:
-          release: False
+          release: ${{ inputs.hexdoc_release == true }}
           site-url: ${{ needs.build-hexdoc.outputs.pages-url }}
 
       # if you want to add extra things to your website (eg. Javadoc/Dokka), add it to _site/dst/docs here
@@ -200,4 +208,4 @@ jobs:
         uses: hexdoc-dev/actions/deploy-pages@v1
         with:
           merge: false
-          release: False
+          release: ${{ inputs.hexdoc_release == true }}
